Mar 22, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- change default ET protocol to 84, fix qstat.cfg

Mar 06, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS file for 1.0.3

Feb 22, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix ut2k4 and doom3 master query not working after starting xqf

Feb 20, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix logic for applying colors

Feb 19, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- use GTK2 colors and Raleigh theme by default in GTK1 version
- update German translation
- reorder some structs to reduce size

Feb 18, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix use of wrong server type when adding servers (#1143801, thanks roerich
  and kracho for helping to debug this)

Feb 05, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- make all icons themeable
- make yellow man actually yellow instead of green

Feb 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add --nomapscan option
- add ET Gslist master
- mark q3 servers with protocol different from master as incompatible

Feb 03, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- update Danish translation (Morten Brix Pedersen)

Jan 30, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- remove quakeforge specials
- remove no longer needed ssam notes
- fix saving of quake2 passwords (#1112381)

Jan 25, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- Halflife2 support (untested)

Jan 21, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- highly experimental: optionally use DT_AUXILIARY stub libraries to not depend
  on libGeoIP and libgdk_pixbuf at runtime

Jan 12, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- split get_new_defaults into game specific functions
- fix doom3 protocol detection (#1092165)

Jan 11, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix crashes due to wrong return type of callbacks (#1098910, patch by Jochen
  Baier)
- fix q1/qw/q2 skin list update
