@@ -497,8 +497,8 @@ struct game games[] = {
     default_port        : 7777,
     default_master_port : 28902,
     id                  : "UT2004S",
-    qstat_str           : "UT2S",
-    qstat_option        : "-ut2s",
+    qstat_str           : "UT2004S",
+    qstat_option        : "-ut2004s",
     qstat_master_option : "-ut2004m",
     icon                : "ut2004.xpm",
     parse_player        : un_parse_player,
