@@ -71,3 +71,11 @@ gametype STMHL2 new extend STM
     master for gametype = HL2S
     default port = 27011
 end
+
+gametype UT2004S new extend UT2S
+    name = UT2004
+    template var = UT2004
+end
+gametype UT2004M modify
+    master for gametype = UT2004S
+end
